# terminate_project

./: README.md  exit  items_views.py  main.py  pyproject.toml  requirements.txt
core/models/: db_helper.py  product.py
shop_app/: pyproject.toml
