[tool.poetry]
name = "shop-app"
version = "0.1.0"
description = ""
authors = ["Игорь Теплов <2173045@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
fastapi = "^0.104.1"
aiosqlite = "^0.19.0"
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
